# gapro-exercises

./: .gitignore
Asteroids/: CMakeLists.txt  GameObject.h  MyUtil.cpp  MyUtil.h  SpaceShit.cpp  SpaceShit.h
Exercises/Ex10/Engine/Engine/: GameObject.h  MyEngine.cpp
Exercises/Ex10/ExampleGame/Game/: ComponentController.cpp  ComponentPlatform.h  ComponentSpline.cpp  ScriptedComponent.h
Exercises/Excercise2/: GameEngine.cpp  GameState.cpp  ITUGames.h  README.md  main.cpp
Exercises/Exercise1/: ITUGames.h  README.md  fixed_game_loop.cpp  fluid_game_loop.cpp  hello.cpp  main.cpp
Exercises/Exercise10/: README.md
Exercises/Exercise10/Engine/: CMakeLists.txt
Exercises/Exercise10/Engine/Engine/: ComponentFactory.h  ComponentList.h  GameObject.cpp  MyEngine.h  QuaternionsSafe.h  ResourceManager.cpp
Exercises/Exercise10/ExampleGame/: main.cpp
Exercises/Exercise10/ExampleGame/Game/: ComponentController.h  ComponentFollowTarget.cpp  ComponentFollowTarget.h  ComponentPlatform.cpp  ComponentPlatformMove.cpp  ComponentPlatformMove.h  ComponentSpline.h  ScriptedComponent.cpp
Exercises/Exercise3/: CMakeLists.txt  README.md
Exercises/Exercise4/Engine/: CMakeLists.txt
Exercises/Exercise4/Engine/Engine/: MyEngine.cpp
Exercises/Exercise4/ExampleGame/data/: spriteatlas.json
Exercises/Exercise5/: README.md
Exercises/Exercise6/Engine/: CMakeLists.txt
Exercises/Exercise6/Engine/Engine/: ComponentFactory.cpp  ComponentFactory.h  GameObject.cpp  GameObject.h  MyEngine.cpp
Exercises/Exercise6/ExampleGame/: main.cpp
Exercises/Exercise6/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentRendererMesh.cpp  ComponentRendererMesh.h
Exercises/Exercise7/: README.md
Exercises/Exercise8/Engine/Engine/: Component.cpp  ComponentFactory.cpp  GameObject.h  MyEngine.cpp  ResourceManager.h
Exercises/Exercise8/ExampleGame/: main.cpp
Exercises/Exercise8/ExampleGame/Game/: ComponentBackground.cpp  ComponentBackground.h  ComponentController.cpp  ComponentController.h  ComponentSpawner.cpp
Exercises/Exercise8/ExampleGame/data/: scene.json
SimpleRenderEngineProject/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
SimpleRenderEngineProject/Asteroids/: GameObject.cpp  main.cpp  main.h
SimpleRenderEngineProject/Asteroids/data/: spriteatlas.json
SimpleRenderEngineProject/Exercise10/Engine/: CMakeLists.txt
SimpleRenderEngineProject/Exercise10/Engine/Engine/Components/: ComponentCamera.cpp  ComponentRendererSprite.h
SimpleRenderEngineProject/Exercise10/ExampleGame/: CMakeLists.txt
SimpleRenderEngineProject/Exercise10/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentPlatformMove.cpp  ComponentPlatformMove.h  ComponentSpline.cpp
SimpleRenderEngineProject/Exercise10/ExampleGame/data/: scene.json
SimpleRenderEngineProject/Exercise8/: CMakeLists.txt  README.md
SimpleRenderEngineProject/Exercise8/Engine8/: CMakeLists.txt
SimpleRenderEngineProject/Exercise8/Engine8/Engine/: Component.h  GameObject.cpp  GameObject.h  MyEngine.h
SimpleRenderEngineProject/Exercise8/Engine8/Engine/Components/: ComponentPhysicsBody.h  ComponentRendererMesh.cpp  ComponentRendererSprite.cpp  ComponentRendererSprite.h
SimpleRenderEngineProject/Exercise8/ExampleGame8/: CMakeLists.txt
SimpleRenderEngineProject/Exercise8/ExampleGame8/Game/: ComponentController.cpp  ComponentController.h  ComponentSpawner.h
SimpleRenderEngineProject/GamesUsingExample6Engine/: CMakeLists.txt  README.md
SimpleRenderEngineProject/GamesUsingExample6Engine/Engine/Engine/: GameObject.cpp
SimpleRenderEngineProject/GamesUsingExample6Engine/NotPlateup/: CMakeLists.txt  main.cpp
SimpleRenderEngineProject/GamesUsingExample6Engine/NotPlateup/Game/: ComponentRendererMesh.cpp  ComponentRendererSphere.cpp  ComponentRendererSphere.h
SimpleRenderEngineProject/GamesUsingExample6Engine/NotPlateup/data/: scene.json
SimpleRenderEngineProject/GamesUsingExample6Engine/PlateupGame/: CMakeLists.txt
SimpleRenderEngineProject/GamesUsingExample6Engine/PlateupGame/Game/: ComponentPlayer.cpp  ComponentRendererMesh.cpp
SimpleRenderEngineProject/GamesUsingExample6Engine/Wolfenstein/: main.cpp
SimpleRenderEngineProject/GamesUsingExample6Engine/Wolfenstein/Game/: ComponentController.cpp  ComponentController.h  ComponentPlayer.h
SimpleRenderEngineProject/Wolfenstein/: CMakeLists.txt
SimpleRenderEngineProject/Wolfenstein/Engine/Engine/: Component.h  ExtraMath.h  MyEngine.h
SimpleRenderEngineProject/Wolfenstein/ExampleGame/: imgui.ini  main.cpp
SimpleRenderEngineProject/Wolfenstein/ExampleGame/Game/: ComponentCamera.cpp  ComponentCamera.h  ComponentController.cpp  ComponentLevelLayout.cpp  ComponentLevelLayout.h  ComponentRendererMesh.cpp  ComponentRendererMesh.h
SimpleRenderEngineProject/Wolfenstein/ExampleGame/data/: scene.json
SimpleRenderEngineProject/submodules/SimpleRenderEngine/examples/: SRE-Example-00_hello-engine  SRE-Example-01_hello-engine-raw
Wolfenstein/: Makefile
Wolfenstein-backup/ExampleGame/: main.cpp  scene.json
Wolfenstein/Engine/: Makefile
Wolfenstein/ExampleGame/: Makefile  main.cpp
Wolfenstein/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentLevelLayout.cpp  ComponentRendererMesh.h
Wolfenstein/ExampleGame/Release/data/: scene.json
Wolfenstein/ExampleGame/data/: scene.json
_Engine_ExamVersion/: CMakeLists.txt
_Engine_ExamVersion/Engine/Engine/: Component.h  GameObject.h  MyEngine.cpp  MyEngine.h
_Engine_ExamVersion/Engine/Engine/Components/: ComponentPhysicsBody.cpp  ComponentRendererMesh.h
(+7 files in other folders)
